# claude-template

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  README.md  TODO.md  UPGRADE_SUMMARY.md  _p-ai-drone-video  audit_report.md  gen_ai_presentation_plan.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  TEMPLATE_GUIDE.md  prompt.md  settings.json
.claude_plans/: README_V19_ANALYSIS.md  TIDY_SIGNAL_RESEARCH_README.md  V19_ANALYSIS_SUMMARY.txt  V20_ACTION_PLAN.md  V20_ANALYSIS_SUMMARY.txt  V20_IMPROVEMENT_SUMMARY.md  algorithm_enhancement_plan.md  clip_extract_codebase_analysis.md  clip_extract_feature_design.md  clip_extract_implementation_plan.md  color_grader_enhancements_summary.md  current_algorithm_review.md  dark_frame_bug_fix_summary.md  demo_report.md  drone_reel_improvement_roadmap.md  dynamic_cropping_enhancements_summary.md  export_presets_implementation.md  implementation_complete.md  implementation_complete_final.md  implementation_complete_summary.md  instagram_worthy_improvements_roadmap.md  narrative_implementation_summary.md  opus_codebase_review.md  presentation-design-spec.md  presentation-research.md  presentation-scripts.md  preview_implementation_summary.md  real_footage_demo_report.md  reel_improvement_roadmap_v2.md  reel_review_vs_viral.md  reframer_cli_integration.md  reframer_drone_enhancements.md  research_color_science.md  research_pro_software.md  research_transitions.md  research_viral_trends.md  rl_commodities_course_research.json  rl_commodities_course_summary.md  scene_detection_enhancements_summary.md  sequence_optimizer_implementation.md  (+27 more)
.claude_prompts/: cursor-copilot-conversion-prompt.md  examples-library-prompt.md  gousto_recipe_scraper.md  interactive-brokers-tws-course.md  interactive-brokers-tws-guide.md  powerpoint-generator-prompt.md  powerpoint-generator.md  presentation-creator-prompt.md  quant-libraries-user-guide.md  review-claude-folder.md  review-core-guidelines.md  review-cursor-parity.md
.claude_research/: RESEARCH_SUMMARY.md  ai-video-stitching-research.md  alphalens_api_inventory.md  alphalens_comprehensive_api_inventory.json  drone-reel-creation-prompt.md  drone_visual_design_principles.md  implementation_priorities.md  openbb_platform_api_reference.md  openbb_platform_comprehensive_research.json  openbb_quick_reference.md  presentation-design-research.md  professional_drone_editing_software_analysis.json  pyfolio_api_summary.md  pyfolio_comprehensive_api_inventory.json  vectorbt_api_reference.md  vectorbt_complete_api_inventory.json  (+4 more)
docs/: index.md  (+10 more)
(+509 files in other folders)
